--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,19 @@
          <groupId>org.apache.poi</groupId>
          <artifactId>poi-ooxml</artifactId>
          <version>3.10-FINAL</version>
-     </dependency>     
+     </dependency>
+     <dependency>  
+    <groupId>javax.servlet</groupId>  
+    <artifactId>servlet-api</artifactId>  
+    <version>2.5</version>  
+    <scope>provided</scope>  
+</dependency> 
+ <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
+ </dependency>      
   </dependencies>
   <build>
     <finalName>wbeautiful</finalName>
